welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: '(' expected but identifier found.
if estFacemur() {
   ^Program:8: error: illegal start of simple expression
	}
        ^